# lastfm-rs

./: .gitignore  Cargo.toml  README.md
examples/: simple.rs
src/: album.rs  artist.rs  lib.rs  library.rs  search.rs  tag.rs  track.rs
